--- a/css/style.css
+++ b/css/style.css
@@ -3,61 +3,121 @@
   src: url(Manrope.ttf);
 }
 
+@keyframes example {
+  0%   {background-color:red;}
+  25%  {background-color:yellow; }
+  50%  {background-color:blue; }
+  75%  {background-color:green; }
+  100% {background-color:red;}
+}
+
 * {
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 body {
-  margin: 5%;
-  max-width: 100%;
   background-color: black;
   color: white;
-}
-
-.contain > h1 {
-  text-transform: uppercase;
-  color: Black;
-  position: absolute;
-  left:50%;
-  bottom: -5%;
-  transform: translate(-50%, -50%);
-  font-size: 35px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  text-transform: capitalize;
+  margin: 0 30px;
+  animation-name: example;
+  animation-duration: 4s;
 }
 
 .contain {
-  width: 80vw;
+  max-width: 100vw;
   height: 100vh;
   background-image: url(./images/edited.jpg);
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 
-h2 {
+.contain h1 {
+  text-align: center;
+  position: relative;
+  top: 90%;
+  font-size: 60px;
+  color: black;
+}
+
+.contained .content1 {
+  font-size: 30px;
   border-bottom: 1px solid white;
-  font-family: "Courier New", Courier, monospace;
-  font-size: 40px;
-  justify-content: center;
+  padding-top: 20px;
+  font-family: cursive;
+  align-items: center;
 }
 
-p {
-  justify-content: left;
+.content2 {
   display: flex;
-  width: 50%;
-  padding: 4% 4%;
-}
-
-.contained p {
-  display: grid;
-  float: left;
-  width: 50%;
-}
-
-.about1{
   width: 100%;
-  gap: 1em;
+  gap: 40px;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.content3 {
+  display: grid;
+  width: 500px;
+}
+
+.content4 {
+  width: 400px;
+  display: grid;
+}
+
+.disco {
+  font-size: 30px;
+  border-bottom: 1px solid white;
+  padding-top: 20px;
+  font-family: cursive;
+  align-items: center;
+}
+
+.leftTop {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.leftBottom {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+}
+
+.rightTop {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+}
+
+.rightBottom {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.pictures {
+  width: 100%;
+  height: 200px;
+  justify-content: space-around;
+  display: flex;
+  flex-direction: row;
+  padding-top: 20px;
+}
+
+.img1,
+.img2,
+.img3 {
+  padding: 0 10px;
+  width: 33.3%;
+}
+
+.img1 > p,
+.img2 > p,
+.img3 > p {
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  font-family: manrope;
+  justify-content: center;
 }
