--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .contain {
-  max-width: 100vw;
+  width: 100vw;
   height: 100vh;
   background-image: url(./images/edited.jpg);
 }
@@ -59,8 +59,7 @@ body {
 }
 
 .content3 {
-  display: grid;
-  width: 500px;
+  width: 300px;
 }
 
 .content4 {
