--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,30 @@
   src: url(Manrope.ttf);
 }
 
+@media screen and (min-width: 280px) {
+
+}
+
+@media screen and (max-width: 1368px){
+
+}
+
 @keyframes example {
-  0%   {background-color:red;}
-  25%  {background-color:yellow; }
-  50%  {background-color:blue; }
-  75%  {background-color:green; }
-  100% {background-color:red;}
+  0% {
+    background-color: red;
+  }
+  25% {
+    background-color: yellow;
+  }
+  50% {
+    background-color: blue;
+  }
+  75% {
+    background-color: green;
+  }
+  100% {
+    background-color: red;
+  }
 }
 
 * {
@@ -22,19 +40,20 @@ body {
   color: white;
   margin: 0 30px;
   animation-name: example;
-  animation-duration: 4s;
+ animation-duration: 4s;
 }
 
-.contain {
-  width: 100vw;
-  height: 100vh;
-  background-image: url(./images/edited.jpg);
+.main-box{
+  position: relative;
 }
 
 .contain h1 {
   text-align: center;
-  position: relative;
+  justify-content: center;
+  position: absolute;
   top: 90%;
+  right: 10%;
+  left: 10%;
   font-size: 60px;
   color: black;
 }
@@ -49,30 +68,20 @@ body {
 
 .content2 {
   display: flex;
-  width: 100%;
+  width: 800px;
   gap: 40px;
-  align-items: center;
-  justify-content: center;
+  margin: auto;
   padding-top: 20px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .content3 {
-  width: 300px;
+  width: 400px;
+  position: relative;
 }
 
 .content4 {
   width: 400px;
   display: grid;
-}
-
-.disco {
-  font-size: 30px;
-  border-bottom: 1px solid white;
-  padding-top: 20px;
-  font-family: cursive;
-  align-items: center;
 }
 
 .leftTop {
@@ -95,9 +104,17 @@ body {
   grid-row: 2 / 3;
 }
 
+.disco {
+  font-size: 30px;
+  border-bottom: 1px solid white;
+  padding-top: 20px;
+  font-family: cursive;
+  align-items: center;
+}
+
 .pictures {
   width: 100%;
-  height: 200px;
+  height: 100%;
   justify-content: space-around;
   display: flex;
   flex-direction: row;
