--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,24 @@
   src: url(Manrope.ttf);
 }
 
-@media screen and (min-width: 280px) {
-
+@media (max-width: 700px) {
+  .main-box {
+      background-image: url('../css/images/edited.jpg');
+  }
 }
 
-@media screen and (max-width: 1368px){
-
+@media (max-width: 1024px) {
+  .main-box {
+      background-image: url('../css/images/edited.jpg');
+  }
 }
+
+@media (max-width: 1025px) {
+  .main-box {
+      background-image: url('../css/images/edited.jpg');
+  }
+}
+
 
 @keyframes example {
   0% {
@@ -36,29 +47,39 @@
 }
 
 body {
+  width: 100%;
   background-color: black;
   color: white;
-  margin: 0 30px;
   animation-name: example;
- animation-duration: 4s;
+  animation-duration: 4s;
+  overflow-x: hidden;
 }
 
-.main-box{
+.side-margin {
+  margin: 0 30px;
+}
+
+.main-box {
+  width: 100%;
+  height: 80vh;
   position: relative;
+  background-image: url("../css/images/edited.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.contain h1 {
+.main-box h1 {
   text-align: center;
   justify-content: center;
   position: absolute;
-  top: 90%;
-  right: 10%;
-  left: 10%;
+  right: 20%;
+  bottom: 10%;
   font-size: 60px;
   color: black;
 }
 
-.contained .content1 {
+h2 {
   font-size: 30px;
   border-bottom: 1px solid white;
   padding-top: 20px;
@@ -66,7 +87,7 @@ body {
   align-items: center;
 }
 
-.content2 {
+.contained {
   display: flex;
   width: 800px;
   gap: 40px;
@@ -74,12 +95,12 @@ body {
   padding-top: 20px;
 }
 
-.content3 {
+.content1 {
   width: 400px;
   position: relative;
 }
 
-.content4 {
+.content2 {
   width: 400px;
   display: grid;
 }
@@ -104,7 +125,7 @@ body {
   grid-row: 2 / 3;
 }
 
-.disco {
+.content3 {
   font-size: 30px;
   border-bottom: 1px solid white;
   padding-top: 20px;
@@ -112,13 +133,14 @@ body {
   align-items: center;
 }
 
-.pictures {
-  width: 100%;
-  height: 100%;
+.content4 {
+  max-width: 100%;
+  max-height: 100%;
   justify-content: space-around;
   display: flex;
   flex-direction: row;
   padding-top: 20px;
+  position: relative;
 }
 
 .img1,
