--- a/css/style.css
+++ b/css/style.css
@@ -60,13 +60,15 @@ body {
 }
 
 .main-box {
-  width: 100%;
+  width: 900px;
   height: 80vh;
   position: relative;
   background-image: url("../css/images/edited.jpg");
   background-position: center;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
+  margin: auto;
+  padding: 30px 0;
 }
 
 .main-box h1 {
@@ -103,6 +105,7 @@ h2 {
 .content2 {
   width: 400px;
   display: grid;
+  border-top: 1px solid black;
 }
 
 .leftTop {
