--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body {
 }
 
 .main-box {
-  width: 900px;
+  width: 1000px;
   height: 80vh;
   position: relative;
   background-image: url("../css/images/edited.jpg");
@@ -75,8 +75,8 @@ body {
   text-align: center;
   justify-content: center;
   position: absolute;
-  right: 20%;
-  bottom: 10%;
+  bottom: 5%;
+  right: 10%;
   font-size: 60px;
   color: black;
 }
@@ -92,7 +92,7 @@ h2 {
 .contained {
   display: flex;
   width: 800px;
-  gap: 40px;
+  gap: 10%;
   margin: auto;
   padding-top: 20px;
 }
@@ -100,6 +100,7 @@ h2 {
 .content1 {
   width: 400px;
   position: relative;
+  text-align: justify;
 }
 
 .content2 {
@@ -137,9 +138,9 @@ h2 {
 }
 
 .content4 {
-  max-width: 100%;
-  max-height: 100%;
-  justify-content: space-around;
+  width: 1000px;
+  height: 100%;
+  justify-content: space-evenly;
   display: flex;
   flex-direction: row;
   padding-top: 20px;
