--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 .side-margin {
-  margin: 0 30px;
+  margin: 30px 30px;
 }
 
 .main-box {
@@ -87,14 +87,19 @@ h2 {
   padding-top: 20px;
   font-family: cursive;
   align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+
 }
 
 .contained {
   display: flex;
   width: 800px;
-  gap: 10%;
+  gap: 50px;
   margin: auto;
   padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .content1 {
@@ -135,6 +140,8 @@ h2 {
   padding-top: 20px;
   font-family: cursive;
   align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .content4 {
@@ -145,6 +152,8 @@ h2 {
   flex-direction: row;
   padding-top: 20px;
   position: relative;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .img1,
