--- a/css/style.css
+++ b/css/style.css
@@ -93,39 +93,50 @@ h2 {
 .contained {
   display: flex;
   width: 800px;
-  gap: 30px;
+  gap: 50px;
   padding-top: 20px;
   margin: auto;
 }
 
 .content1 {
   width: 400px;
+  text-align: justify;
 }
 
 .content2 {
   width: 400px;
   display: grid;
+  grid-template-columns: repeat(4, 2fr);
 }
 
-.leftTop {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+.class{
+  width: 25%;
 }
 
-.leftBottom {
-  grid-column: 1 / 2;
-  grid-row: 2 / 3;
+.class1{
+  width: 25%;
+  
 }
 
-.rightTop {
-  grid-column: 2 / 3;
-  grid-row: 1 / 3;
-}
-
-.rightBottom {
-  grid-column: 2 / 3;
-  grid-row: 2 / 3;
-}
+/* .leftTop { */
+  /* grid-column: 1 / 2; */
+  /* grid-row: 1 / 2; */
+/* } */
+/*  */
+/* .leftBottom { */
+  /* grid-column: 1 / 2; */
+  /* grid-row: 2 / 3; */
+/* } */
+/*  */
+/* .rightTop { */
+  /* grid-column: 2 / 2; */
+  /* grid-row: 1 / 2; */
+/* } */
+/*  */
+/* .rightBottom { */
+  /* grid-column: 2 / 3; */
+  /* grid-row: 2 / 3; */
+/* } */
 
 .content3 {
   font-size: 30px;
