--- a/css/style.css
+++ b/css/style.css
@@ -3,24 +3,6 @@
   src: url(Manrope.ttf);
 }
 
-@media (max-width: 700px) {
-  .main-box {
-    background-image: url("../css/images/edited.jpg");
-  }
-}
-
-@media (max-width: 1024px) {
-  .main-box {
-    background-image: url("../css/images/edited.jpg");
-  }
-}
-
-@media (max-width: 1025px) {
-  .main-box {
-    background-image: url("../css/images/edited.jpg");
-  }
-}
-
 @keyframes example {
   0% {
     background-color: red;
@@ -96,11 +78,14 @@ h2 {
   gap: 50px;
   padding-top: 20px;
   margin: auto;
+  padding: 40px 50px ;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .content1 {
   width: 400px;
-text-align: justify;
+  text-align: justify;
 }
 
 .content2 {
@@ -109,33 +94,32 @@ text-align: justify;
   grid-template-columns: repeat(4, 2fr);
 }
 
-.class{
-  width: 25%;
+.class {
+  width: 50%;
 }
 
-.class1{
-  width: 25%;
-  
+.class1 {
+  width: 50%;
 }
 
 /* .leftTop { */
-  /* grid-column: 1 / 2; */
-  /* grid-row: 1 / 2; */
+/* grid-column: 1 / 2; */
+/* grid-row: 1 / 2; */
 /* } */
 /*  */
 /* .leftBottom { */
-  /* grid-column: 1 / 2; */
-  /* grid-row: 2 / 3; */
+/* grid-column: 1 / 2; */
+/* grid-row: 2 / 3; */
 /* } */
 /*  */
 /* .rightTop { */
-  /* grid-column: 2 / 2; */
-  /* grid-row: 1 / 2; */
+/* grid-column: 2 / 2; */
+/* grid-row: 1 / 2; */
 /* } */
 /*  */
 /* .rightBottom { */
-  /* grid-column: 2 / 3; */
-  /* grid-row: 2 / 3; */
+/* grid-column: 2 / 3; */
+/* grid-row: 2 / 3; */
 /* } */
 
 .content3 {
